# CryptographicEstimators

./: .buildinfo  .gitignore  .readthedocs.yaml  Dockerfile  Dockerfile_  LICENSE  Makefile  Makefile_  NOTICE  README.md  UsedGuide.md  User Guide of the CryptographicEstimators Library .ipynb  User_Guide.ipynb  base_algorithm.html  base_constants.html  base_estimator.html  base_problem.html  conf.py  conftest.py  estimation_renderer.html  genindex.html  helper.html  index.html  input_dictionary.json  main.html  objects.inv  py-modindex.html  pyproject.toml  python-shell.nix  references.html  references.rst  requirements.txt  run_update_changelog.sh  search.html  searchindex.js  setup.cfg  setup.py  shell.nix  sonar-project.properties  test.py  (+1 more)
.doctrees/: base_algorithm.doctree  base_constants.doctree  base_estimator.doctree  base_problem.doctree  environment.pickle  estimation_renderer.doctree  helper.doctree  index.doctree  main.doctree  references.doctree
.doctrees/BIKEEstimator/: bike_algorithm.doctree  bike_constants.doctree  bike_estimator.doctree  bike_problem.doctree
.doctrees/DummyEstimator/: dummy_algorithm.doctree  dummy_estimator.doctree  dummy_problem.doctree
.doctrees/IFEstimator/: if_constants.doctree  if_estimator.doctree  if_helper.doctree
.doctrees/LEEstimator/: le_algorithm.doctree  le_constants.doctree  le_estimator.doctree  le_helper.doctree  le_problem.doctree
.doctrees/MAYOEstimator/: mayo_algorithm.doctree  mayo_constants.doctree  mayo_estimator.doctree  mayo_helper.doctree  mayo_problem.doctree
.github/: pull_request_template.md
BIKEEstimator/: bike_algorithm.html  bike_constants.html  bike_estimator.html  bike_problem.html
DummyEstimator/: dummy_algorithm.html  dummy_estimator.html  dummy_problem.html
IFEstimator/: if_algorithm.html  if_constants.html  if_estimator.html  if_helper.html  if_problem.html
LEEstimator/: le_algorithm.html  le_constants.html  le_estimator.html  le_helper.html  le_problem.html
MAYOEstimator/: mayo_algorithm.html  mayo_constants.html  mayo_estimator.html  mayo_helper.html  mayo_problem.html
MQEstimator/: degree_of_regularity.html  mq_algorithm.html  mq_constants.html  mq_estimator.html  mq_helper.html  mq_problem.html  witness_degree.html
MREstimator/: mr_algorithm.html  mr_constants.html  mr_estimator.html  mr_helper.html  mr_problem.html
PEEstimator/: pe_algorithm.html  pe_constants.html  pe_estimator.html  pe_helper.html  pe_problem.html
PKEstimator/: pk_algorithm.html  pk_constants.html  pk_estimator.html  pk_helper.html  pk_problem.html
RankSDEstimator/: ranksd_algorithm.html  ranksd_constants.html  ranksd_estimator.html  ranksd_helper.html  ranksd_problem.html
RegSDEstimator/: regsd_algorithm.html  regsd_constants.html  regsd_estimator.html  regsd_helper.html  regsd_problem.html
SDEstimator/: sd_algorithm.html  sd_constants.html  sd_estimator.html  sd_helper.html  sd_problem.html
SDFqEstimator/: sdfq_algorithm.html  sdfq_constants.html  sdfq_estimator.html  sdfq_helper.html  sdfq_problem.html
SEEstimator/: se_algorithm.html  se_estimator.html  se_problem.html
UOVEstimator/: uov_algorithm.html  uov_constants.html  uov_estimator.html  uov_problem.html
_sources/: base_algorithm.rst.txt  base_estimator.rst.txt  index.rst.txt  main.rst.txt
cryptographic_estimators/: __init__.py  base_algorithm.py  base_constants.py  base_estimator.py  base_problem.py  estimation_renderer.py  helper.py  mq_main.sage  mq_main.sage.py
docs/: CHANGELOG.md  CONTRIBUTING.md  conf.py  kwargs_formatter.py  tests.md
docs/github/: tests.md  (+6 more)
scripts/: append_estimator_to_input_dictionary.py  create_copyright.py  create_documentation.py  create_new_estimator.py  create_new_estimator_copy.py  generate_requirements.py  update_changelog.py
tests/: Dockerfile  conftest.py  failing_kat_2.yaml  faling_kat.yaml  good_kat.yaml  helper.py  kat.yaml  reference_values.yaml  test_estimators.py  test_if.py  test_kat.py  test_le.py  test_le.sage  test_le_bbps.sage  test_le_beullens.sage  test_mq.py  test_mq_estimator.py  test_pe.sage  test_pk.sage  test_sd.py  test_sdfq.py  test_sdfq.sage
(+649 files in other folders)
