[build-system]
requires = ["setuptools>=61", "wheel" ]
build-backend = "setuptools.build_meta"

[project]
name = "cryptographic_estimators"
#license = "Apache-2.0"
description = "This library provides bit security estimators and asymptotic complexity estimators for cryptographic problems."
authors = [
  {name = "TII", email = "cryptographic_estimators@tii.ae"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Security :: Cryptography",
  "License :: OSI Approved :: MIT License",
]

version = "2.0.0"

dependencies = [
  "sphinx>=5.3.0",
  "scipy>=1.4.0",
  "furo",
  "prettytable",
  "pytest",
  "pytest-xdist",
  "python-flint",
  "pytest-cov",
  "pyyaml",
  "sympy",
]

[project.urls]
Homepage = "https://estimators.crypto.tii.ae/"
Documentation = "https://github.com/Crypto-TII/CryptographicEstimators/blob/main/docs/github/user_guide.md"
Repository = "https://github.com/Crypto-TII/CryptographicEstimators"
Issues = "https://github.com/Crypto-TII/CryptographicEstimators/issues"

[tool.setuptools]
packages = ["cryptographic_estimators", "tests"]

[tool.setuptools.package-data]
cryptographic_estimators = ["*"]

[tool.pytest.ini_options]
addopts = "-v --import-mode=importlib"
testpaths = [
  "tests",
]
